[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "TileStats"
version = "0.1.2"
description = "Python package with functions for hexagonal and rectangular tile binning of 2D data."
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [
  {name = "Anton Antonov"}
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

dependencies = [
    "matplotlib"
]

[project.urls]
homepage = "https://github.com/antononcube/Python-TileStats"